<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toggle_wlan"
        android:textOn="@string/toggle_wlan_on"
        android:textOff="@string/toggle_wlan_off"
        android:id="@+id/toggleButton_capture"
        android:layout_centerHorizontal="true"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:theme="@style/Base.Widget.AppCompat.DrawerArrowToggle.Common" />


    <View
        android:id="@+id/divide_line_1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/toggleButton_capture"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="#90909090" />

    <TextView
        android:id="@+id/position_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divide_line_1"
        android:text="@string/position_info" />

    <LinearLayout
        android:id="@+id/leaner_layout_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/position_info" >

        <EditText
            android:id="@+id/editText_x"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:ems="10"
            android:inputType="numberDecimal"
            android:theme="@style/Base.V12.Widget.AppCompat.EditText">
        </EditText>

        <EditText
            android:id="@+id/editText_y"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <View
        android:id="@+id/divide_line_2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/leaner_layout_2"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="#90909090" />

    <LinearLayout
        android:id="@+id/leaner_layout_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divide_line_2" >

        <TextView
            android:id="@+id/frequency_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_info" />

        <EditText
            android:id="@+id/frequency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/leaner_layout_5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leaner_layout_3" >

        <TextView
            android:id="@+id/total_length_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_length_info" />

        <EditText
            android:id="@+id/total_length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/button_collect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leaner_layout_5"
        android:text="@string/btn_collect"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:background="#47ffbd"
        android:backgroundTintMode="src_over"
        android:backgroundTint="#5cff64"
        android:clickable="true"
        android:textColor="#090909"
        android:enabled="true"
        android:focusableInTouchMode="true" />



</RelativeLayout>
